[tool.poetry]
name = "william-fiset-data-structures-playlist"
version = "0.1.0"
description = ""
authors = ["Dushyant Singh Shekhawat <contact@dushyantss.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pylint = "^2.8.3"
black = {version = "^21.6b0", allow-prereleases = true}
mypy = "^0.910"
rope = "^0.19.0"
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
